add icon no title

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="https://th.bing.com/th?id=ODLS.d3754c6c-0ccb-48dd-b706-3622ae3d3563&w=32&h=32&o=6&pid=13.1">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500;900&display=swap" rel="stylesheet">
